// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component Should concat classname in props with Bulma classname 1`] = `
<div
  className="level other-class this-is-a-test"
>
  <p>
    Default
  </p>
</div>
`;

exports[`Level component Should exist 1`] = `[Function]`;

exports[`Level component Should expose Level Side and Item 1`] = `[Function]`;

exports[`Level component Should expose Level Side and Item 2`] = `[Function]`;

exports[`Level component Should have is-mobile class if mobile prop is true 1`] = `
<div
  className="level is-mobile"
>
  <div
    className="level-left"
  >
    <div
      className="level-item"
    >
      Item 1
    </div>
    <div
      className="level-item"
    >
      Item 2
    </div>
  </div>
  <div
    className="level-right"
  >
    <div
      className="level-item"
    >
      Item 3
    </div>
  </div>
</div>
`;

exports[`Level component Should have level classname 1`] = `
<div
  className="level"
>
  <div
    className="level-item"
  >
    Item 1
  </div>
  <div
    className="level-item"
  >
    Item 2
  </div>
  <div
    className="level-item"
  >
    Item 3
  </div>
</div>
`;

exports[`Level component Should render Levels with right and left side 1`] = `
<div
  className="level"
>
  <div
    className="level-left"
  >
    <div
      className="level-item"
    >
      Item 1
    </div>
    <div
      className="level-item"
    >
      Item 2
    </div>
  </div>
  <div
    className="level-right"
  >
    <div
      className="level-item"
    >
      Item 3
    </div>
  </div>
</div>
`;

exports[`Level component Should use inline styles 1`] = `
<div
  className="level"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;
